// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaterialUISwitch should match snapshot given theme is dark 1`] = `
<body>
  <div>
    <span
      class="MuiSwitch-root MuiSwitch-sizeMedium css-654mf-MuiSwitch-root"
    >
      <span
        class="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root css-mghcik-MuiButtonBase-root-MuiSwitch-switchBase"
      >
        <input
          class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
          type="checkbox"
        />
        <span
          class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
        />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiSwitch-track css-dnkzfa-MuiSwitch-track"
      />
    </span>
  </div>
</body>
`;

exports[`MaterialUISwitch should match snapshot given theme is light 1`] = `
<body>
  <div>
    <span
      class="MuiSwitch-root MuiSwitch-sizeMedium css-catpii-MuiSwitch-root"
    >
      <span
        class="MuiSwitch-switchBase MuiSwitch-colorPrimary MuiButtonBase-root MuiSwitch-switchBase MuiSwitch-colorPrimary PrivateSwitchBase-root css-5ryogn-MuiButtonBase-root-MuiSwitch-switchBase"
      >
        <input
          class="MuiSwitch-input PrivateSwitchBase-input css-1m9pwf3"
          type="checkbox"
        />
        <span
          class="MuiSwitch-thumb css-jsexje-MuiSwitch-thumb"
        />
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </span>
      <span
        class="MuiSwitch-track css-1yjjitx-MuiSwitch-track"
      />
    </span>
  </div>
</body>
`;
